--- a/HereYouAR/Info.plist
+++ b/HereYouAR/Info.plist
@@ -39,5 +39,17 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This is needed to determine your current location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This is needed to determine your current location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This is needed to determine your current location</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>This is needed to determine your current location</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Need it</string>
+	<key>NSMotionUsageDescription</key>
+	<string>This is needed to determine your current location</string>
 </dict>
 </plist>
